[gd_scene load_steps=28 format=3 uid="uid://dhjrc28o432pk"]

[ext_resource type="Script" path="res://player/player.gd" id="1_cbo13"]
[ext_resource type="Script" path="res://weapons/reticle.gd" id="2_77glr"]
[ext_resource type="Script" path="res://Scripts/inventory.gd" id="3_eet5f"]
[ext_resource type="Script" path="res://Scripts/interaction.gd" id="3_jhsic"]
[ext_resource type="Script" path="res://Scripts/reticle_ray.gd" id="4_sikl1"]
[ext_resource type="Script" path="res://weapons/weapons.gd" id="6_qdqrk"]
[ext_resource type="FontFile" uid="uid://ckjqci0g26e80" path="res://external/Orbitron Medium.ttf" id="6_w4t3i"]
[ext_resource type="Script" path="res://player/StateMachine/StateMachine.gd" id="8_bw4md"]
[ext_resource type="Script" path="res://player/StateMachine/move_state.gd" id="9_uiyeq"]
[ext_resource type="Script" path="res://player/StateMachine/diyalogue_state.gd" id="10_jw2nf"]
[ext_resource type="Script" path="res://player/StateMachine/inventory_state.gd" id="11_pdbfm"]
[ext_resource type="Texture2D" uid="uid://dmwm5o7hrso7l" path="res://external/bitmap.png" id="12_01h06"]
[ext_resource type="PackedScene" uid="uid://didfhp7chm7e" path="res://Scenes/inventory_button.tscn" id="13_e4sah"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="14_saej1"]
[ext_resource type="PackedScene" uid="uid://m8jbt25qi0j3" path="res://Scenes/overview.tscn" id="15_orgm4"]
[ext_resource type="Script" path="res://Scripts/dialogue.gd" id="16_tvu3e"]
[ext_resource type="PackedScene" uid="uid://bh2ojr7ymexb2" path="res://Scenes/label.tscn" id="17_wji7j"]
[ext_resource type="PackedScene" uid="uid://dmthcbtlrqmvk" path="res://Scenes/button.tscn" id="18_8pgc4"]

[sub_resource type="BoxMesh" id="BoxMesh_cbere"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gog4e"]
size = Vector3(1, 2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdq1w"]
bg_color = Color(0.521569, 0.478431, 1, 0.686275)
skew = Vector2(450, 80)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lpnh"]
bg_color = Color(0.523333, 0.48, 1, 0.196078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1ptv"]
bg_color = Color(0.301961, 0.109804, 0.321569, 1)

[sub_resource type="Animation" id="Animation_b8b73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3ow6n"]
resource_name = "select_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c83au"]
_data = {
"RESET": SubResource("Animation_b8b73"),
"select_in": SubResource("Animation_3ow6n")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8rnp0"]
texture = ExtResource("12_01h06")

[node name="player" type="CharacterBody3D"]
collision_layer = 3
script = ExtResource("1_cbo13")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_cbere")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_gog4e")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.601927, 0)

[node name="Recoil" type="Node3D" parent="CameraPivot"]

[node name="Camera3D" type="Camera3D" parent="CameraPivot/Recoil"]
unique_name_in_owner = true
current = true
script = ExtResource("6_qdqrk")

[node name="Interaction_Ray" type="RayCast3D" parent="CameraPivot/Recoil" node_paths=PackedStringArray("inventory", "player")]
transform = Transform3D(1, 0, 0, 0, -1.13546e-07, -1, 0, 2.59764, -4.37114e-08, 0, 0, -0.139095)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true
script = ExtResource("3_jhsic")
inventory = NodePath("../../../Inventory")
player = NodePath("../../..")

[node name="Reticle_Ray" type="RayCast3D" parent="CameraPivot/Recoil" node_paths=PackedStringArray("Reticle")]
transform = Transform3D(1, 0, 0, 0, -1.42721e-06, -1, 0, 32.6507, -4.37114e-08, 0, 0, -0.51918)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("4_sikl1")
Reticle = NodePath("../../../UserInterface/Reticle")

[node name="Weapon_Ray" type="RayCast3D" parent="CameraPivot/Recoil"]
transform = Transform3D(1, 0, 0, 0, -8.36271e-06, -1, 0, 191.316, -4.37114e-08, 0, 0, 0)
collision_mask = 16

[node name="UserInterface" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_77glr")
RETICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]
PLAYER_CONTROLLER = NodePath("../..")
RETICLE_DISTANCE = 6.0

[node name="Top" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="interaction" type="Control" parent="UserInterface"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
offset_left = 76.0
offset_top = -21.0
offset_right = 116.0
offset_bottom = 19.0

[node name="Panel" type="Panel" parent="UserInterface/interaction"]
visible = false
modulate = Color(0.521569, 0.478431, 1, 0.686275)
layout_mode = 2
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sdq1w")

[node name="ProgressBar" type="ProgressBar" parent="UserInterface/interaction"]
custom_minimum_size = Vector2(65, 80)
layout_mode = 2
offset_left = 761.0
offset_top = 699.0
offset_right = 831.0
offset_bottom = 779.0
theme_override_styles/background = SubResource("StyleBoxFlat_7lpnh")
theme_override_styles/fill = SubResource("StyleBoxFlat_y1ptv")
show_percentage = false

[node name="Key" type="Label" parent="UserInterface/interaction/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -26.0
offset_right = 522.0
offset_bottom = 574.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 600
text = "E"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="anim" type="AnimationPlayer" parent="UserInterface/interaction/ProgressBar"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_c83au")
}

[node name="Action" type="Label" parent="UserInterface/interaction"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.449
anchor_top = 0.648
anchor_right = 0.684
anchor_bottom = 0.722
offset_left = 840.04
offset_top = 690.08
offset_right = 2213.64
offset_bottom = 1187.12
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 500

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("8_bw4md")
body = NodePath("..")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("9_uiyeq")

[node name="Diyalogue" type="Node" parent="StateMachine"]
script = ExtResource("10_jw2nf")

[node name="Inventory" type="Node" parent="StateMachine"]
script = ExtResource("11_pdbfm")

[node name="Inventory" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -175.0
offset_right = 253.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_eet5f")

[node name="Panel" type="Panel" parent="Inventory"]
custom_minimum_size = Vector2(500, 300)
offset_right = 500.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxTexture_8rnp0")

[node name="Label" type="Label" parent="Inventory/Panel"]
modulate = Color(0.661989, 0.44348, 1, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.5
offset_top = -36.0
offset_right = 95.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 36
text = "Inventory"

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="1" type="HBoxContainer" parent="Inventory/VBoxContainer"]
layout_mode = 2

[node name="1" parent="Inventory/VBoxContainer/1" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="2" parent="Inventory/VBoxContainer/1" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="3" parent="Inventory/VBoxContainer/1" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="4" parent="Inventory/VBoxContainer/1" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="2" type="HBoxContainer" parent="Inventory/VBoxContainer"]
layout_mode = 2

[node name="1" parent="Inventory/VBoxContainer/2" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="2" parent="Inventory/VBoxContainer/2" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="3" parent="Inventory/VBoxContainer/2" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="4" parent="Inventory/VBoxContainer/2" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="3" type="HBoxContainer" parent="Inventory/VBoxContainer"]
layout_mode = 2

[node name="1" parent="Inventory/VBoxContainer/3" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="2" parent="Inventory/VBoxContainer/3" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="3" parent="Inventory/VBoxContainer/3" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="4" parent="Inventory/VBoxContainer/3" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="4" type="HBoxContainer" parent="Inventory/VBoxContainer"]
layout_mode = 2

[node name="1" parent="Inventory/VBoxContainer/4" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="2" parent="Inventory/VBoxContainer/4" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="3" parent="Inventory/VBoxContainer/4" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="4" parent="Inventory/VBoxContainer/4" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
layout_mode = 2
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="UI" type="HBoxContainer" parent="Inventory/VBoxContainer"]
layout_mode = 2
script = ExtResource("14_saej1")

[node name="item_inactive_button" parent="Inventory/VBoxContainer/UI" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
custom_minimum_size = Vector2(110, 50)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 16
disabled = true
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="equip" parent="Inventory/VBoxContainer/UI" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
custom_minimum_size = Vector2(106, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 16
text = "Equip"
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="inequip" parent="Inventory/VBoxContainer/UI" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
custom_minimum_size = Vector2(106, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 16
text = "Inequip"
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="drop" parent="Inventory/VBoxContainer/UI" node_paths=PackedStringArray("overview") instance=ExtResource("13_e4sah")]
custom_minimum_size = Vector2(106, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 16
text = "Drop"
overview = NodePath("../../../../OverviewContainer/Inventory_overview/Overview")

[node name="OverviewContainer" type="SubViewportContainer" parent="."]
visible = false
offset_left = 947.0
offset_top = 377.0
offset_right = 1147.0
offset_bottom = 577.0

[node name="Inventory_overview" type="SubViewport" parent="OverviewContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 200)
render_target_update_mode = 0

[node name="Overview" parent="OverviewContainer/Inventory_overview" instance=ExtResource("15_orgm4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21.9599, -23.4257)

[node name="Dialogue" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 200)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -200.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("16_tvu3e")
label_scene = ExtResource("17_wji7j")
button_scene = ExtResource("18_8pgc4")

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogue"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -100.0
offset_right = 380.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Responder" type="Label" parent="Dialogue/VBoxContainer"]
modulate = Color(0, 0.646279, 0.720069, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_w4t3i")
theme_override_font_sizes/font_size = 18
text = "qwerwqrewq"

[node name="HBoxContainer" type="HBoxContainer" parent="Dialogue/VBoxContainer"]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4

[node name="HUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Inventory/VBoxContainer/1/1" to="Inventory/VBoxContainer/1/1" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/1/2" to="Inventory/VBoxContainer/1/2" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/1/3" to="Inventory/VBoxContainer/1/3" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/1/4" to="Inventory/VBoxContainer/1/4" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/2/1" to="Inventory/VBoxContainer/2/1" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/2/2" to="Inventory/VBoxContainer/2/2" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/2/3" to="Inventory/VBoxContainer/2/3" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/2/4" to="Inventory/VBoxContainer/2/4" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/3/1" to="Inventory/VBoxContainer/3/1" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/3/2" to="Inventory/VBoxContainer/3/2" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/3/3" to="Inventory/VBoxContainer/3/3" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/3/4" to="Inventory/VBoxContainer/3/4" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/4/1" to="Inventory/VBoxContainer/4/1" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/4/2" to="Inventory/VBoxContainer/4/2" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/4/3" to="Inventory/VBoxContainer/4/3" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/4/4" to="Inventory/VBoxContainer/4/4" method="_on_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/UI/equip" to="Inventory/VBoxContainer/UI" method="_on_equip_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/UI/inequip" to="Inventory/VBoxContainer/UI" method="_on_inequip_pressed"]
[connection signal="pressed" from="Inventory/VBoxContainer/UI/drop" to="Inventory/VBoxContainer/UI" method="_on_drop_pressed"]
